fix the issue with the navbar on smaller screens

--- a/traffic_data/static/main.css
+++ b/traffic_data/static/main.css
@@ -1,6 +1,7 @@
 #flex {
   display: flex;
   flex-direction: row;
+  white-space: nowrap;
 }
 
 #date-slider {
@@ -24,7 +25,8 @@
     padding-bottom: 1.0rem;
 }
 
-#tweet_btn {
+#tweet_btn,
+#hashtag-dropdown {
     border-color: #eee #ddd #bbb;
     border-radius: 5px;
     border-style: solid;
